added some new files

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="game">
-            <a href="guess_number.html">
+            <a href="guessnuumber.html">
                 <img src="images/guess the no.jpg" alt="Guess the Number">
             </a>
             <p>🔢 Guess the Number</p>
