--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>❌⭕ Tic Tac Toe</title>
-    <link rel="stylesheet" href="stylerockpaper.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -31,6 +31,6 @@
 
     <button id="reset-btn">Reset Game</button>
 
-    <script src="apptictactoe.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
